@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,8 +19,6 @@ package org.springframework.context.index.processor;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Properties;
 import java.util.Set;
 
@@ -28,14 +26,15 @@ import java.util.Set;
  * Marshaller to write {@link CandidateComponentsMetadata} as properties.
  *
  * @author Stephane Nicoll
+ * @author Vedran Pavic
  * @since 5.0
  */
 abstract class PropertiesMarshaller {
 
 	public static void write(CandidateComponentsMetadata metadata, OutputStream out) throws IOException {
-		Properties props = new Properties();
+		Properties props = new SortedProperties(true);
 		metadata.getItems().forEach(m -> props.put(m.getType(), String.join(",", m.getStereotypes())));
-		props.store(out, "");
+		props.store(out, null);
 	}
 
 	public static CandidateComponentsMetadata read(InputStream in) throws IOException {
@@ -43,7 +42,7 @@ abstract class PropertiesMarshaller {
 		Properties props = new Properties();
 		props.load(in);
 		props.forEach((type, value) -> {
-			Set<String> candidates = new HashSet<>(Arrays.asList(((String) value).split(",")));
+			Set<String> candidates = Set.of(((String) value).split(","));
 			result.add(new ItemMetadata((String) type, candidates));
 		});
 		return result;
