@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,13 +20,14 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.expression.AccessException;
 import org.springframework.expression.EvaluationContext;
@@ -37,30 +38,32 @@ import org.springframework.expression.TypedValue;
 import org.springframework.expression.spel.standard.SpelExpressionParser;
 import org.springframework.expression.spel.support.StandardEvaluationContext;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 @SuppressWarnings("rawtypes")
-public class IndexingTests {
+class IndexingTests {
 
 	@Test
-	public void indexIntoGenericPropertyContainingMap() {
+	@SuppressWarnings("unchecked")
+	void indexIntoGenericPropertyContainingMap() {
 		Map<String, String> property = new HashMap<>();
 		property.put("foo", "bar");
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
-		assertEquals(property, expression.getValue(this, Map.class));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
+		assertThat(expression.getValue(this, Map.class)).isEqualTo(property);
 		expression = parser.parseExpression("property['foo']");
-		assertEquals("bar", expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo("bar");
 	}
 
 	@FieldAnnotation
 	public Object property;
 
 	@Test
-	public void indexIntoGenericPropertyContainingMapObject() {
+	@SuppressWarnings("unchecked")
+	void indexIntoGenericPropertyContainingMapObject() {
 		Map<String, Map<String, String>> property = new HashMap<>();
 		Map<String, String> map = new HashMap<>();
 		map.put("foo", "bar");
@@ -70,11 +73,11 @@ public class IndexingTests {
 		context.addPropertyAccessor(new MapAccessor());
 		context.setRootObject(property);
 		Expression expression = parser.parseExpression("property");
-		assertEquals("java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(context).toString());
-		assertEquals(map, expression.getValue(context));
-		assertEquals(map, expression.getValue(context, Map.class));
+		assertThat(expression.getValueTypeDescriptor(context).toString()).isEqualTo("java.util.HashMap<?, ?>");
+		assertThat(expression.getValue(context)).isEqualTo(map);
+		assertThat(expression.getValue(context, Map.class)).isEqualTo(map);
 		expression = parser.parseExpression("property['foo']");
-		assertEquals("bar", expression.getValue(context));
+		assertThat(expression.getValue(context)).isEqualTo("bar");
 	}
 
 	public static class MapAccessor implements PropertyAccessor {
@@ -109,231 +112,251 @@ public class IndexingTests {
 	}
 
 	@Test
-	public void setGenericPropertyContainingMap() {
+	void setGenericPropertyContainingMap() {
 		Map<String, String> property = new HashMap<>();
 		property.put("foo", "bar");
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property['foo']");
-		assertEquals("bar", expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo("bar");
 		expression.setValue(this, "baz");
-		assertEquals("baz", expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo("baz");
 	}
 
 	@Test
-	public void setPropertyContainingMap() {
+	void setPropertyContainingMap() {
 		Map<Integer, Integer> property = new HashMap<>();
 		property.put(9, 3);
 		this.parameterizedMap = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedMap");
-		assertEquals("java.util.HashMap<java.lang.Integer, java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.HashMap<java.lang.Integer, java.lang.Integer>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("parameterizedMap['9']");
-		assertEquals(3, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(3);
 		expression.setValue(this, "37");
-		assertEquals(37, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(37);
 	}
 
 	public Map<Integer, Integer> parameterizedMap;
 
 	@Test
-	public void setPropertyContainingMapAutoGrow() {
+	void setPropertyContainingMapAutoGrow() {
 		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, false));
 		Expression expression = parser.parseExpression("parameterizedMap");
-		assertEquals("java.util.Map<java.lang.Integer, java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.Map<java.lang.Integer, java.lang.Integer>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("parameterizedMap['9']");
-		assertEquals(null, expression.getValue(this));
+		assertThat(expression.getValue(this)).isNull();
 		expression.setValue(this, "37");
-		assertEquals(37, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(37);
 	}
 
 	@Test
-	public void indexIntoGenericPropertyContainingList() {
+	void indexIntoGenericPropertyContainingList() {
 		List<String> property = new ArrayList<>();
 		property.add("bar");
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property[0]");
-		assertEquals("bar", expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo("bar");
 	}
 
 	@Test
-	public void setGenericPropertyContainingList() {
+	void setGenericPropertyContainingList() {
 		List<Integer> property = new ArrayList<>();
 		property.add(3);
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property[0]");
-		assertEquals(3, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(3);
 		expression.setValue(this, "4");
-		assertEquals("4", expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo("4");
 	}
 
 	@Test
-	public void setGenericPropertyContainingListAutogrow() {
+	void setGenericPropertyContainingListAutogrow() {
 		List<Integer> property = new ArrayList<>();
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property[0]");
 		try {
 			expression.setValue(this, "4");
 		}
 		catch (EvaluationException ex) {
-			assertTrue(ex.getMessage().startsWith("EL1053E"));
+			assertThat(ex.getMessage().startsWith("EL1053E")).isTrue();
 		}
 	}
 
+	public List<BigDecimal> decimals;
+
 	@Test
-	public void indexIntoPropertyContainingList() {
+	void autoGrowListOfElementsWithoutDefaultConstructor() {
+		this.decimals = new ArrayList<>();
+		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
+		parser.parseExpression("decimals[0]").setValue(this, "123.4");
+		assertThat(decimals).containsExactly(BigDecimal.valueOf(123.4));
+	}
+
+	@Test
+	void indexIntoPropertyContainingListContainingNullElement() {
+		this.decimals = new ArrayList<>();
+		this.decimals.add(null);
+		this.decimals.add(BigDecimal.ONE);
+		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
+		parser.parseExpression("decimals[0]").setValue(this, "9876.5");
+		assertThat(decimals).containsExactly(BigDecimal.valueOf(9876.5), BigDecimal.ONE);
+	}
+
+	@Test
+	void indexIntoPropertyContainingList() {
 		List<Integer> property = new ArrayList<>();
 		property.add(3);
 		this.parameterizedList = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedList");
-		assertEquals("java.util.ArrayList<java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<java.lang.Integer>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("parameterizedList[0]");
-		assertEquals(3, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(3);
 	}
 
 	public List<Integer> parameterizedList;
 
 	@Test
-	public void indexIntoPropertyContainingListOfList() {
+	void indexIntoPropertyContainingListOfList() {
 		List<List<Integer>> property = new ArrayList<>();
 		property.add(Arrays.asList(3));
 		this.parameterizedListOfList = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedListOfList[0]");
-		assertEquals("java.util.Arrays$ArrayList<java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property.get(0), expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.Arrays$ArrayList<java.lang.Integer>");
+		assertThat(expression.getValue(this)).isEqualTo(property.get(0));
 		expression = parser.parseExpression("parameterizedListOfList[0][0]");
-		assertEquals(3, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(3);
 	}
 
 	public List<List<Integer>> parameterizedListOfList;
 
 	@Test
-	public void setPropertyContainingList() {
+	void setPropertyContainingList() {
 		List<Integer> property = new ArrayList<>();
 		property.add(3);
 		this.parameterizedList = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("parameterizedList");
-		assertEquals("java.util.ArrayList<java.lang.Integer>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<java.lang.Integer>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("parameterizedList[0]");
-		assertEquals(3, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(3);
 		expression.setValue(this, "4");
-		assertEquals(4, expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo(4);
 	}
 
 	@Test
-	public void indexIntoGenericPropertyContainingNullList() {
+	void indexIntoGenericPropertyContainingNullList() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.Object", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.Object");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property[0]");
 		try {
-			assertEquals("bar", expression.getValue(this));
+			assertThat(expression.getValue(this)).isEqualTo("bar");
 		}
 		catch (EvaluationException ex) {
-			assertTrue(ex.getMessage().startsWith("EL1027E"));
+			assertThat(ex.getMessage().startsWith("EL1027E")).isTrue();
 		}
 	}
 
 	@Test
-	public void indexIntoGenericPropertyContainingGrowingList() {
+	void indexIntoGenericPropertyContainingGrowingList() {
 		List<String> property = new ArrayList<>();
 		this.property = property;
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property[0]");
 		try {
-			assertEquals("bar", expression.getValue(this));
+			assertThat(expression.getValue(this)).isEqualTo("bar");
 		}
 		catch (EvaluationException ex) {
-			assertTrue(ex.getMessage().startsWith("EL1053E"));
+			assertThat(ex.getMessage().startsWith("EL1053E")).isTrue();
 		}
 	}
 
 	@Test
-	public void indexIntoGenericPropertyContainingGrowingList2() {
+	void indexIntoGenericPropertyContainingGrowingList2() {
 		List<String> property2 = new ArrayList<>();
 		this.property2 = property2;
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property2");
-		assertEquals("java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property2, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<?>");
+		assertThat(expression.getValue(this)).isEqualTo(property2);
 		expression = parser.parseExpression("property2[0]");
 		try {
-			assertEquals("bar", expression.getValue(this));
+			assertThat(expression.getValue(this)).isEqualTo("bar");
 		}
 		catch (EvaluationException ex) {
-			assertTrue(ex.getMessage().startsWith("EL1053E"));
+			assertThat(ex.getMessage().startsWith("EL1053E")).isTrue();
 		}
 	}
 
 	public List property2;
 
 	@Test
-	public void indexIntoGenericPropertyContainingArray() {
+	void indexIntoGenericPropertyContainingArray() {
 		String[] property = new String[] { "bar" };
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("property");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.String[]", expression.getValueTypeDescriptor(this).toString());
-		assertEquals(property, expression.getValue(this));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.lang.String[]");
+		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("property[0]");
-		assertEquals("bar", expression.getValue(this));
+		assertThat(expression.getValue(this)).isEqualTo("bar");
 	}
 
 	@Test
-	public void emptyList() {
+	void emptyList() {
 		listOfScalarNotGeneric = new ArrayList();
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfScalarNotGeneric");
-		assertEquals("java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals("", expression.getValue(this, String.class));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.ArrayList<?>");
+		assertThat(expression.getValue(this, String.class)).isEqualTo("");
 	}
 
 	@SuppressWarnings("unchecked")
 	@Test
-	public void resolveCollectionElementType() {
+	void resolveCollectionElementType() {
 		listNotGeneric = new ArrayList(2);
 		listNotGeneric.add(5);
 		listNotGeneric.add(6);
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listNotGeneric");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>", expression.getValueTypeDescriptor(this).toString());
-		assertEquals("5,6", expression.getValue(this, String.class));
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.ArrayList<?>");
+		assertThat(expression.getValue(this, String.class)).isEqualTo("5,6");
 	}
 
 	@Test
-	public void resolveCollectionElementTypeNull() {
+	void resolveCollectionElementTypeNull() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listNotGeneric");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.List<?>", expression.getValueTypeDescriptor(this).toString());
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.List<?>");
 	}
 
 	@FieldAnnotation
@@ -347,13 +370,13 @@ public class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	public void resolveMapKeyValueTypes() {
+	void resolveMapKeyValueTypes() {
 		mapNotGeneric = new HashMap();
 		mapNotGeneric.put("baseAmount", 3.11);
 		mapNotGeneric.put("bonusAmount", 7.17);
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("mapNotGeneric");
-		assertEquals("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>", expression.getValueTypeDescriptor(this).toString());
+		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.HashMap<?, ?>");
 	}
 
 	@FieldAnnotation
@@ -361,12 +384,12 @@ public class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	public void testListOfScalar() {
+	void testListOfScalar() {
 		listOfScalarNotGeneric = new ArrayList(1);
 		listOfScalarNotGeneric.add("5");
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfScalarNotGeneric[0]");
-		assertEquals(new Integer(5), expression.getValue(this, Integer.class));
+		assertThat(expression.getValue(this, Integer.class)).isEqualTo(Integer.valueOf(5));
 	}
 
 	public List listOfScalarNotGeneric;
@@ -374,14 +397,14 @@ public class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	public void testListsOfMap() {
+	void testListsOfMap() {
 		listOfMapsNotGeneric = new ArrayList();
 		Map map = new HashMap();
 		map.put("fruit", "apple");
 		listOfMapsNotGeneric.add(map);
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfMapsNotGeneric[0]['fruit']");
-		assertEquals("apple", expression.getValue(this, String.class));
+		assertThat(expression.getValue(this, String.class)).isEqualTo("apple");
 	}
 
 	public List listOfMapsNotGeneric;
