@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -35,9 +35,7 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.core.MethodParameter;
 import org.springframework.core.convert.TypeDescriptor;
@@ -60,10 +58,12 @@ import org.springframework.expression.spel.support.ReflectivePropertyAccessor;
 import org.springframework.expression.spel.support.StandardEvaluationContext;
 import org.springframework.expression.spel.support.StandardTypeLocator;
 import org.springframework.expression.spel.testresources.le.div.mod.reserved.Reserver;
+import org.springframework.lang.Nullable;
 import org.springframework.util.ObjectUtils;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 
 /**
  * Reproduction tests cornering various reported SpEL issues.
@@ -74,115 +74,106 @@ import static org.junit.Assert.*;
  * @author Phillip Webb
  * @author Sam Brannen
  */
-public class SpelReproTests extends AbstractExpressionTests {
-
-	@Rule
-	public ExpectedException thrown = ExpectedException.none();
-
+class SpelReproTests extends AbstractExpressionTests {
 
 	@Test
-	public void NPE_SPR5661() {
+	void NPE_SPR5661() {
 		evaluate("joinThreeStrings('a',null,'c')", "anullc", String.class);
 	}
 
 	@Test
-	public void SWF1086() {
+	void SWF1086() {
 		evaluate("printDouble(T(java.math.BigDecimal).valueOf(14.35))", "14.35", String.class);
 	}
 
 	@Test
-	public void doubleCoercion() {
+	void doubleCoercion() {
 		evaluate("printDouble(14.35)", "14.35", String.class);
 	}
 
 	@Test
-	public void doubleArrayCoercion() {
+	void doubleArrayCoercion() {
 		evaluate("printDoubles(getDoublesAsStringList())", "{14.35, 15.45}", String.class);
 	}
 
 	@Test
-	public void SPR5899() {
+	void SPR5899() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Spr5899Class());
 		Expression expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull(12)");
-		assertEquals(12, expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo(12);
 		expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull(null)");
-		assertEquals(null, expr.getValue(context));
-		try {
-			expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull2(null)");
-			expr.getValue();
-			fail("Should have failed to find a method to which it could pass null");
-		}
-		catch (EvaluationException see) {
-			// success
-		}
+		assertThat(expr.getValue(context)).isNull();
+		expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull2(null)");
+		assertThatExceptionOfType(EvaluationException.class).isThrownBy(
+				expr::getValue);
 		context.setTypeLocator(new MyTypeLocator());
 
 		// varargs
 		expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull3(null,'a','b')");
-		assertEquals("ab", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("ab");
 
 		// varargs 2 - null is packed into the varargs
 		expr = new SpelExpressionParser().parseRaw("tryToInvokeWithNull3(12,'a',null,'c')");
-		assertEquals("anullc", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("anullc");
 
 		// check we can find the ctor ok
 		expr = new SpelExpressionParser().parseRaw("new Spr5899Class().toString()");
-		assertEquals("instance", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("instance");
 
 		expr = new SpelExpressionParser().parseRaw("new Spr5899Class(null).toString()");
-		assertEquals("instance", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("instance");
 
 		// ctor varargs
 		expr = new SpelExpressionParser().parseRaw("new Spr5899Class(null,'a','b').toString()");
-		assertEquals("instance", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("instance");
 
 		// ctor varargs 2
 		expr = new SpelExpressionParser().parseRaw("new Spr5899Class(null,'a', null, 'b').toString()");
-		assertEquals("instance", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("instance");
 	}
 
 	@Test
-	public void SPR5905_InnerTypeReferences() {
+	void SPR5905_InnerTypeReferences() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Spr5899Class());
 		Expression expr = new SpelExpressionParser().parseRaw("T(java.util.Map$Entry)");
-		assertEquals(Map.Entry.class, expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo(Map.Entry.class);
 
 		expr = new SpelExpressionParser().parseRaw("T(org.springframework.expression.spel.SpelReproTests$Outer$Inner).run()");
-		assertEquals(12, expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo(12);
 
 		expr = new SpelExpressionParser().parseRaw("new org.springframework.expression.spel.SpelReproTests$Outer$Inner().run2()");
-		assertEquals(13, expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo(13);
 	}
 
 	@Test
-	public void SPR5804() {
+	void SPR5804() {
 		Map<String, String> m = new HashMap<>();
 		m.put("foo", "bar");
 		StandardEvaluationContext context = new StandardEvaluationContext(m);  // root is a map instance
 		context.addPropertyAccessor(new MapAccessor());
 		Expression expr = new SpelExpressionParser().parseRaw("['foo']");
-		assertEquals("bar", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("bar");
 	}
 
 	@Test
-	public void SPR5847() {
+	void SPR5847() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new TestProperties());
 		String name = null;
 		Expression expr = null;
 
 		expr = new SpelExpressionParser().parseRaw("jdbcProperties['username']");
 		name = expr.getValue(context, String.class);
-		assertEquals("Dave", name);
+		assertThat(name).isEqualTo("Dave");
 
 		expr = new SpelExpressionParser().parseRaw("jdbcProperties[username]");
 		name = expr.getValue(context, String.class);
-		assertEquals("Dave", name);
+		assertThat(name).isEqualTo("Dave");
 
 		// MapAccessor required for this to work
 		expr = new SpelExpressionParser().parseRaw("jdbcProperties.username");
 		context.addPropertyAccessor(new MapAccessor());
 		name = expr.getValue(context, String.class);
-		assertEquals("Dave", name);
+		assertThat(name).isEqualTo("Dave");
 
 		// --- dotted property names
 
@@ -191,17 +182,17 @@ public class SpelReproTests extends AbstractExpressionTests {
 		expr = new SpelExpressionParser().parseRaw("jdbcProperties[foo.bar]");
 		context.addPropertyAccessor(new MapAccessor());
 		name = expr.getValue(context, String.class);
-		assertEquals("Dave2", name);
+		assertThat(name).isEqualTo("Dave2");
 
 		// key is foo.bar
 		expr = new SpelExpressionParser().parseRaw("jdbcProperties['foo.bar']");
 		context.addPropertyAccessor(new MapAccessor());
 		name = expr.getValue(context, String.class);
-		assertEquals("Elephant", name);
+		assertThat(name).isEqualTo("Elephant");
 	}
 
 	@Test
-	public void NPE_SPR5673() {
+	void NPE_SPR5673() {
 		ParserContext hashes = TemplateExpressionParsingTests.HASH_DELIMITED_PARSER_CONTEXT;
 		ParserContext dollars = TemplateExpressionParsingTests.DEFAULT_TEMPLATE_PARSER_CONTEXT;
 
@@ -236,67 +227,55 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void propertyAccessOnNullTarget_SPR5663() throws AccessException {
+	void propertyAccessOnNullTarget_SPR5663() throws AccessException {
 		PropertyAccessor accessor = new ReflectivePropertyAccessor();
 		EvaluationContext context = TestScenarioCreator.getTestEvaluationContext();
-		assertFalse(accessor.canRead(context, null, "abc"));
-		assertFalse(accessor.canWrite(context, null, "abc"));
-
-		try {
-			accessor.read(context, null, "abc");
-			fail("Should have failed with an IllegalStateException");
-		}
-		catch (IllegalStateException ex) {
-			// expected
-		}
-
-		try {
-			accessor.write(context, null, "abc", "foo");
-			fail("Should have failed with an IllegalStateException");
-		}
-		catch (IllegalStateException ex) {
-			// expected
-		}
+		assertThat(accessor.canRead(context, null, "abc")).isFalse();
+		assertThat(accessor.canWrite(context, null, "abc")).isFalse();
+		assertThatIllegalStateException().isThrownBy(() ->
+				accessor.read(context, null, "abc"));
+		assertThatIllegalStateException().isThrownBy(() ->
+				accessor.write(context, null, "abc", "foo"));
 	}
 
 	@Test
-	public void nestedProperties_SPR6923() {
+	void nestedProperties_SPR6923() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Foo());
 		Expression expr = new SpelExpressionParser().parseRaw("resource.resource.server");
 		String name = expr.getValue(context, String.class);
-		assertEquals("abc", name);
+		assertThat(name).isEqualTo("abc");
 	}
 
 	/** Should be accessing Goo.getKey because 'bar' field evaluates to "key" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_1() {
+	void indexingAsAPropertyAccess_SPR6968_1() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Goo());
 		String name = null;
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("instance[bar]");
 		name = expr.getValue(context, String.class);
-		assertEquals("hello", name);
+		assertThat(name).isEqualTo("hello");
 		name = expr.getValue(context, String.class); // will be using the cached accessor this time
-		assertEquals("hello", name);
+		assertThat(name).isEqualTo("hello");
 	}
 
 	/** Should be accessing Goo.getKey because 'bar' variable evaluates to "key" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_2() {
+	void indexingAsAPropertyAccess_SPR6968_2() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Goo());
 		context.setVariable("bar", "key");
 		String name = null;
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("instance[#bar]");
 		name = expr.getValue(context, String.class);
-		assertEquals("hello", name);
+		assertThat(name).isEqualTo("hello");
 		name = expr.getValue(context, String.class); // will be using the cached accessor this time
-		assertEquals("hello", name);
+		assertThat(name).isEqualTo("hello");
 	}
 
 	/** $ related identifiers */
 	@Test
-	public void dollarPrefixedIdentifier_SPR7100() {
+	void dollarPrefixedIdentifier_SPR7100() {
 		Holder h = new Holder();
 		StandardEvaluationContext context = new StandardEvaluationContext(h);
 		context.addPropertyAccessor(new MapAccessor());
@@ -311,32 +290,32 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		expr = new SpelExpressionParser().parseRaw("map.$foo");
 		name = expr.getValue(context, String.class);
-		assertEquals("wibble", name);
+		assertThat(name).isEqualTo("wibble");
 
 		expr = new SpelExpressionParser().parseRaw("map.foo$bar");
 		name = expr.getValue(context, String.class);
-		assertEquals("wobble", name);
+		assertThat(name).isEqualTo("wobble");
 
 		expr = new SpelExpressionParser().parseRaw("map.foobar$$");
 		name = expr.getValue(context, String.class);
-		assertEquals("wabble", name);
+		assertThat(name).isEqualTo("wabble");
 
 		expr = new SpelExpressionParser().parseRaw("map.$");
 		name = expr.getValue(context, String.class);
-		assertEquals("wubble", name);
+		assertThat(name).isEqualTo("wubble");
 
 		expr = new SpelExpressionParser().parseRaw("map.$$");
 		name = expr.getValue(context, String.class);
-		assertEquals("webble", name);
+		assertThat(name).isEqualTo("webble");
 
 		expr = new SpelExpressionParser().parseRaw("map.$_$");
 		name = expr.getValue(context, String.class);
-		assertEquals("tribble", name);
+		assertThat(name).isEqualTo("tribble");
 	}
 
 	/** Should be accessing Goo.wibble field because 'bar' variable evaluates to "wibble" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_3() {
+	void indexingAsAPropertyAccess_SPR6968_3() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Goo());
 		context.setVariable("bar", "wibble");
 		String name = null;
@@ -344,9 +323,9 @@ public class SpelReproTests extends AbstractExpressionTests {
 		expr = new SpelExpressionParser().parseRaw("instance[#bar]");
 		// will access the field 'wibble' and not use a getter
 		name = expr.getValue(context, String.class);
-		assertEquals("wobble", name);
+		assertThat(name).isEqualTo("wobble");
 		name = expr.getValue(context, String.class); // will be using the cached accessor this time
-		assertEquals("wobble", name);
+		assertThat(name).isEqualTo("wobble");
 	}
 
 	/**
@@ -354,7 +333,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * "wibble"
 	 */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_4() {
+	void indexingAsAPropertyAccess_SPR6968_4() {
 		Goo g = Goo.instance;
 		StandardEvaluationContext context = new StandardEvaluationContext(g);
 		context.setVariable("bar", "wibble");
@@ -362,40 +341,40 @@ public class SpelReproTests extends AbstractExpressionTests {
 		expr = new SpelExpressionParser().parseRaw("instance[#bar]='world'");
 		// will access the field 'wibble' and not use a getter
 		expr.getValue(context, String.class);
-		assertEquals("world", g.wibble);
+		assertThat(g.wibble).isEqualTo("world");
 		expr.getValue(context, String.class); // will be using the cached accessor this time
-		assertEquals("world", g.wibble);
+		assertThat(g.wibble).isEqualTo("world");
 	}
 
 	/** Should be accessing Goo.setKey field because 'bar' variable evaluates to "key" */
 	@Test
-	public void indexingAsAPropertyAccess_SPR6968_5() {
+	void indexingAsAPropertyAccess_SPR6968_5() {
 		Goo g = Goo.instance;
 		StandardEvaluationContext context = new StandardEvaluationContext(g);
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("instance[bar]='world'");
 		expr.getValue(context, String.class);
-		assertEquals("world", g.value);
+		assertThat(g.value).isEqualTo("world");
 		expr.getValue(context, String.class); // will be using the cached accessor this time
-		assertEquals("world", g.value);
+		assertThat(g.value).isEqualTo("world");
 	}
 
 	@Test
-	public void dollars() {
+	void dollars() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("m['$foo']");
 		context.setVariable("file_name", "$foo");
-		assertEquals("wibble", expr.getValue(context, String.class));
+		assertThat(expr.getValue(context, String.class)).isEqualTo("wibble");
 	}
 
 	@Test
-	public void dollars2() {
+	void dollars2() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 		expr = new SpelExpressionParser().parseRaw("m[$foo]");
 		context.setVariable("file_name", "$foo");
-		assertEquals("wibble", expr.getValue(context, String.class));
+		assertThat(expr.getValue(context, String.class)).isEqualTo("wibble");
 	}
 
 	private void checkTemplateParsing(String expression, String expectedValue) {
@@ -405,7 +384,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	private void checkTemplateParsing(String expression, ParserContext context, String expectedValue) {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expr = parser.parseExpression(expression, context);
-		assertEquals(expectedValue, expr.getValue(TestScenarioCreator.getTestEvaluationContext()));
+		assertThat(expr.getValue(TestScenarioCreator.getTestEvaluationContext())).isEqualTo(expectedValue);
 	}
 
 	private void checkTemplateParsingError(String expression, String expectedMessage) {
@@ -414,20 +393,15 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	private void checkTemplateParsingError(String expression, ParserContext context, String expectedMessage) {
 		SpelExpressionParser parser = new SpelExpressionParser();
-		try {
-			parser.parseExpression(expression, context);
-			fail("Should have failed with message: " + expectedMessage);
-		}
-		catch (Exception ex) {
+		assertThatExceptionOfType(Exception.class).isThrownBy(() ->
+				parser.parseExpression(expression, context))
+			.satisfies(ex -> {
 			String message = ex.getMessage();
 			if (ex instanceof ExpressionException) {
 				message = ((ExpressionException) ex).getSimpleMessage();
 			}
-			if (!message.equals(expectedMessage)) {
-				ex.printStackTrace();
-			}
-			assertThat(expectedMessage, equalTo(message));
-		}
+			assertThat(message).isEqualTo(expectedMessage);
+		});
 	}
 
 
@@ -447,106 +421,96 @@ public class SpelReproTests extends AbstractExpressionTests {
 	};
 
 	@Test
-	public void beanResolution() {
+	void beanResolution() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 
 		// no resolver registered == exception
 		try {
 			expr = new SpelExpressionParser().parseRaw("@foo");
-			assertEquals("custard", expr.getValue(context, String.class));
+			assertThat(expr.getValue(context, String.class)).isEqualTo("custard");
 		}
 		catch (SpelEvaluationException see) {
-			assertEquals(SpelMessage.NO_BEAN_RESOLVER_REGISTERED, see.getMessageCode());
-			assertEquals("foo", see.getInserts()[0]);
+			assertThat(see.getMessageCode()).isEqualTo(SpelMessage.NO_BEAN_RESOLVER_REGISTERED);
+			assertThat(see.getInserts()[0]).isEqualTo("foo");
 		}
 
 		context.setBeanResolver(new MyBeanResolver());
 
 		// bean exists
 		expr = new SpelExpressionParser().parseRaw("@foo");
-		assertEquals("custard", expr.getValue(context, String.class));
+		assertThat(expr.getValue(context, String.class)).isEqualTo("custard");
 
 		// bean does not exist
 		expr = new SpelExpressionParser().parseRaw("@bar");
-		assertEquals(null, expr.getValue(context, String.class));
+		assertThat(expr.getValue(context, String.class)).isNull();
 
 		// bean name will cause AccessException
 		expr = new SpelExpressionParser().parseRaw("@goo");
 		try {
-			assertEquals(null, expr.getValue(context, String.class));
+			assertThat(expr.getValue(context, String.class)).isNull();
 		}
 		catch (SpelEvaluationException see) {
-			assertEquals(SpelMessage.EXCEPTION_DURING_BEAN_RESOLUTION, see.getMessageCode());
-			assertEquals("goo", see.getInserts()[0]);
-			assertTrue(see.getCause() instanceof AccessException);
-			assertTrue(see.getCause().getMessage().startsWith("DONT"));
+			assertThat(see.getMessageCode()).isEqualTo(SpelMessage.EXCEPTION_DURING_BEAN_RESOLUTION);
+			assertThat(see.getInserts()[0]).isEqualTo("goo");
+			assertThat(see.getCause() instanceof AccessException).isTrue();
+			assertThat(see.getCause().getMessage().startsWith("DONT")).isTrue();
 		}
 
 		// bean exists
 		expr = new SpelExpressionParser().parseRaw("@'foo.bar'");
-		assertEquals("trouble", expr.getValue(context, String.class));
+		assertThat(expr.getValue(context, String.class)).isEqualTo("trouble");
 
 		// bean exists
 		try {
 			expr = new SpelExpressionParser().parseRaw("@378");
-			assertEquals("trouble", expr.getValue(context, String.class));
+			assertThat(expr.getValue(context, String.class)).isEqualTo("trouble");
 		}
 		catch (SpelParseException spe) {
-			assertEquals(SpelMessage.INVALID_BEAN_REFERENCE, spe.getMessageCode());
+			assertThat(spe.getMessageCode()).isEqualTo(SpelMessage.INVALID_BEAN_REFERENCE);
 		}
 	}
 
 	@Test
-	public void elvis_SPR7209_1() {
+	void elvis_SPR7209_1() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new XX());
 		Expression expr = null;
 
 		// Different parts of elvis expression are null
 		expr = new SpelExpressionParser().parseRaw("(?:'default')");
-		assertEquals("default", expr.getValue());
+		assertThat(expr.getValue()).isEqualTo("default");
 		expr = new SpelExpressionParser().parseRaw("?:'default'");
-		assertEquals("default", expr.getValue());
+		assertThat(expr.getValue()).isEqualTo("default");
 		expr = new SpelExpressionParser().parseRaw("?:");
-		assertEquals(null, expr.getValue());
+		assertThat(expr.getValue()).isNull();
 
 		// Different parts of ternary expression are null
-		try {
-			expr = new SpelExpressionParser().parseRaw("(?'abc':'default')");
-			expr.getValue(context);
-			fail();
-		}
-		catch (SpelEvaluationException see) {
-			assertEquals(SpelMessage.TYPE_CONVERSION_ERROR, see.getMessageCode());
-		}
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				new SpelExpressionParser().parseRaw("(?'abc':'default')").getValue(context))
+			.satisfies(ex -> assertThat(ex.getMessageCode()).isEqualTo(SpelMessage.TYPE_CONVERSION_ERROR));
 		expr = new SpelExpressionParser().parseRaw("(false?'abc':null)");
-		assertEquals(null, expr.getValue());
+		assertThat(expr.getValue()).isNull();
 
 		// Assignment
-		try {
-			expr = new SpelExpressionParser().parseRaw("(='default')");
-			expr.getValue(context);
-			fail();
-		}
-		catch (SpelEvaluationException see) {
-			assertEquals(SpelMessage.SETVALUE_NOT_SUPPORTED, see.getMessageCode());
-		}
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				new SpelExpressionParser().parseRaw("(='default')").getValue(context))
+			.satisfies(ex -> assertThat(ex.getMessageCode()).isEqualTo(SpelMessage.SETVALUE_NOT_SUPPORTED));
 	}
 
 	@Test
-	public void elvis_SPR7209_2() {
+	void elvis_SPR7209_2() {
 		Expression expr = null;
 		// Have empty string treated as null for elvis
 		expr = new SpelExpressionParser().parseRaw("?:'default'");
-		assertEquals("default", expr.getValue());
+		assertThat(expr.getValue()).isEqualTo("default");
 		expr = new SpelExpressionParser().parseRaw("\"\"?:'default'");
-		assertEquals("default", expr.getValue());
+		assertThat(expr.getValue()).isEqualTo("default");
 		expr = new SpelExpressionParser().parseRaw("''?:'default'");
-		assertEquals("default", expr.getValue());
+		assertThat(expr.getValue()).isEqualTo("default");
 	}
 
 	@Test
-	public void mapOfMap_SPR7244() {
+	void mapOfMap_SPR7244() {
 		Map<String, Object> map = new LinkedHashMap<>();
 		map.put("uri", "http:");
 		Map<String, String> nameMap = new LinkedHashMap<>();
@@ -558,55 +522,55 @@ public class SpelReproTests extends AbstractExpressionTests {
 		String el1 = "#root['value'].get('givenName')";
 		Expression exp = parser.parseExpression(el1);
 		Object evaluated = exp.getValue(context);
-		assertEquals("Arthur", evaluated);
+		assertThat(evaluated).isEqualTo("Arthur");
 
 		String el2 = "#root['value']['givenName']";
 		exp = parser.parseExpression(el2);
 		evaluated = exp.getValue(context);
-		assertEquals("Arthur", evaluated);
+		assertThat(evaluated).isEqualTo("Arthur");
 	}
 
 	@Test
-	public void projectionTypeDescriptors_1() {
+	void projectionTypeDescriptors_1() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new C());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		String el1 = "ls.![#this.equals('abc')]";
 		SpelExpression exp = parser.parseRaw(el1);
 		List<?> value = (List<?>) exp.getValue(context);
 		// value is list containing [true,false]
-		assertEquals(Boolean.class, value.get(0).getClass());
+		assertThat(value.get(0).getClass()).isEqualTo(Boolean.class);
 		TypeDescriptor evaluated = exp.getValueTypeDescriptor(context);
-		assertEquals(null, evaluated.getElementTypeDescriptor());
+		assertThat(evaluated.getElementTypeDescriptor()).isNull();
 	}
 
 	@Test
-	public void projectionTypeDescriptors_2() {
+	void projectionTypeDescriptors_2() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new C());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		String el1 = "as.![#this.equals('abc')]";
 		SpelExpression exp = parser.parseRaw(el1);
 		Object[] value = (Object[]) exp.getValue(context);
 		// value is array containing [true,false]
-		assertEquals(Boolean.class, value[0].getClass());
+		assertThat(value[0].getClass()).isEqualTo(Boolean.class);
 		TypeDescriptor evaluated = exp.getValueTypeDescriptor(context);
-		assertEquals(Boolean.class, evaluated.getElementTypeDescriptor().getType());
+		assertThat(evaluated.getElementTypeDescriptor().getType()).isEqualTo(Boolean.class);
 	}
 
 	@Test
-	public void projectionTypeDescriptors_3() {
+	void projectionTypeDescriptors_3() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new C());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		String el1 = "ms.![key.equals('abc')]";
 		SpelExpression exp = parser.parseRaw(el1);
 		List<?> value = (List<?>) exp.getValue(context);
 		// value is list containing [true,false]
-		assertEquals(Boolean.class, value.get(0).getClass());
+		assertThat(value.get(0).getClass()).isEqualTo(Boolean.class);
 		TypeDescriptor evaluated = exp.getValueTypeDescriptor(context);
-		assertEquals(null, evaluated.getElementTypeDescriptor());
+		assertThat(evaluated.getElementTypeDescriptor()).isNull();
 	}
 
 	@Test
-	public void greaterThanWithNulls_SPR7840() {
+	void greaterThanWithNulls_SPR7840() {
 		List<D> list = new ArrayList<>();
 		list.add(new D("aaa"));
 		list.add(new D("bbb"));
@@ -621,18 +585,18 @@ public class SpelReproTests extends AbstractExpressionTests {
 		String el1 = "#root.?[a < 'hhh']";
 		SpelExpression exp = parser.parseRaw(el1);
 		Object value = exp.getValue(context);
-		assertEquals("[D(aaa), D(bbb), D(null), D(ccc), D(null)]", value.toString());
+		assertThat(value.toString()).isEqualTo("[D(aaa), D(bbb), D(null), D(ccc), D(null)]");
 
 		String el2 = "#root.?[a > 'hhh']";
 		SpelExpression exp2 = parser.parseRaw(el2);
 		Object value2 = exp2.getValue(context);
-		assertEquals("[D(zzz)]", value2.toString());
+		assertThat(value2.toString()).isEqualTo("[D(zzz)]");
 
 		// trim out the nulls first
 		String el3 = "#root.?[a!=null].?[a < 'hhh']";
 		SpelExpression exp3 = parser.parseRaw(el3);
 		Object value3 = exp3.getValue(context);
-		assertEquals("[D(aaa), D(bbb), D(ccc)]", value3.toString());
+		assertThat(value3.toString()).isEqualTo("[D(aaa), D(bbb), D(ccc)]");
 	}
 
 	/**
@@ -641,7 +605,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * than a unboxing conversion.
 	 */
 	@Test
-	public void conversionPriority_SPR8224() throws Exception {
+	void conversionPriority_SPR8224() throws Exception {
 
 		@SuppressWarnings("unused")
 		class ConversionPriority1 {
@@ -663,30 +627,30 @@ public class SpelReproTests extends AbstractExpressionTests {
 			}
 		}
 
-		final Integer INTEGER = Integer.valueOf(7);
+		final Integer INTEGER = 7;
 
 		EvaluationContext emptyEvalContext = new StandardEvaluationContext();
 
 		List<TypeDescriptor> args = new ArrayList<>();
-		args.add(TypeDescriptor.forObject(new Integer(42)));
+		args.add(TypeDescriptor.forObject(42));
 
 		ConversionPriority1 target = new ConversionPriority1();
 		MethodExecutor me = new ReflectiveMethodResolver(true).resolve(emptyEvalContext, target, "getX", args);
 		// MethodInvoker chooses getX(int i) when passing Integer
-		final int actual = (Integer) me.execute(emptyEvalContext, target, new Integer(42)).getValue();
+		final int actual = (Integer) me.execute(emptyEvalContext, target, Integer.valueOf(42)).getValue();
 		// Compiler chooses getX(Number i) when passing Integer
 		final int compiler = target.getX(INTEGER);
 		// Fails!
-		assertEquals(compiler, actual);
+		assertThat(actual).isEqualTo(compiler);
 
 		ConversionPriority2 target2 = new ConversionPriority2();
 		MethodExecutor me2 = new ReflectiveMethodResolver(true).resolve(emptyEvalContext, target2, "getX", args);
 		// MethodInvoker chooses getX(int i) when passing Integer
-		int actual2 = (Integer) me2.execute(emptyEvalContext, target2, new Integer(42)).getValue();
+		int actual2 = (Integer) me2.execute(emptyEvalContext, target2, Integer.valueOf(42)).getValue();
 		// Compiler chooses getX(Number i) when passing Integer
 		int compiler2 = target2.getX(INTEGER);
 		// Fails!
-		assertEquals(compiler2, actual2);
+		assertThat(actual2).isEqualTo(compiler2);
 
 	}
 
@@ -695,7 +659,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * method accepting 'long' is ok.
 	 */
 	@Test
-	public void wideningPrimitiveConversion_SPR8224() throws Exception {
+	void wideningPrimitiveConversion_SPR8224() throws Exception {
 
 		class WideningPrimitiveConversion {
 			public int getX(long i) {
@@ -703,7 +667,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 			}
 		}
 
-		final Integer INTEGER_VALUE = Integer.valueOf(7);
+		final Integer INTEGER_VALUE = 7;
 		WideningPrimitiveConversion target = new WideningPrimitiveConversion();
 		EvaluationContext emptyEvalContext = new StandardEvaluationContext();
 
@@ -714,11 +678,11 @@ public class SpelReproTests extends AbstractExpressionTests {
 		final int actual = (Integer) me.execute(emptyEvalContext, target, INTEGER_VALUE).getValue();
 
 		final int compiler = target.getX(INTEGER_VALUE);
-		assertEquals(compiler, actual);
+		assertThat(actual).isEqualTo(compiler);
 	}
 
 	@Test
-	public void varargsAgainstProxy_SPR16122() {
+	void varargsAgainstProxy_SPR16122() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expr = parser.parseExpression("process('a', 'b')");
 
@@ -727,12 +691,12 @@ public class SpelReproTests extends AbstractExpressionTests {
 				getClass().getClassLoader(), new Class<?>[] {VarargsInterface.class},
 				(proxy1, method, args) -> method.invoke(receiver, args));
 
-		assertEquals("OK", expr.getValue(new StandardEvaluationContext(receiver)));
-		assertEquals("OK", expr.getValue(new StandardEvaluationContext(proxy)));
+		assertThat(expr.getValue(new StandardEvaluationContext(receiver))).isEqualTo("OK");
+		assertThat(expr.getValue(new StandardEvaluationContext(proxy))).isEqualTo("OK");
 	}
 
 	@Test
-	public void testCompiledExpressionForProxy_SPR16191() {
+	void testCompiledExpressionForProxy_SPR16191() {
 		SpelExpressionParser expressionParser =
 				new SpelExpressionParser(new SpelParserConfiguration(SpelCompilerMode.IMMEDIATE, null));
 		Expression expression = expressionParser.parseExpression("#target.process(#root)");
@@ -747,11 +711,11 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		String result = expression.getValue(evaluationContext, "foo", String.class);
 		result = expression.getValue(evaluationContext, "foo", String.class);
-		assertEquals("OK", result);
+		assertThat(result).isEqualTo("OK");
 	}
 
 	@Test
-	public void varargsAndPrimitives_SPR8174() throws Exception {
+	void varargsAndPrimitives_SPR8174() throws Exception {
 		EvaluationContext emptyEvalContext = new StandardEvaluationContext();
 		List<TypeDescriptor> args = new ArrayList<>();
 
@@ -799,7 +763,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void reservedWords_SPR8228() {
+	void reservedWords_SPR8228() {
 
 		// "DIV","EQ","GE","GT","LE","LT","MOD","NE","NOT"
 		@SuppressWarnings("unused")
@@ -825,37 +789,37 @@ public class SpelReproTests extends AbstractExpressionTests {
 		String ex = "getReserver().NE";
 		SpelExpression exp = parser.parseRaw(ex);
 		String value = (String) exp.getValue(context);
-		assertEquals("abc", value);
+		assertThat(value).isEqualTo("abc");
 
 		ex = "getReserver().ne";
 		exp = parser.parseRaw(ex);
 		value = (String) exp.getValue(context);
-		assertEquals("def", value);
+		assertThat(value).isEqualTo("def");
 
 		ex = "getReserver().m[NE]";
 		exp = parser.parseRaw(ex);
 		value = (String) exp.getValue(context);
-		assertEquals("xyz", value);
+		assertThat(value).isEqualTo("xyz");
 
 		ex = "getReserver().DIV";
 		exp = parser.parseRaw(ex);
-		assertEquals(1, exp.getValue(context));
+		assertThat(exp.getValue(context)).isEqualTo(1);
 
 		ex = "getReserver().div";
 		exp = parser.parseRaw(ex);
-		assertEquals(3, exp.getValue(context));
+		assertThat(exp.getValue(context)).isEqualTo(3);
 
 		exp = parser.parseRaw("NE");
-		assertEquals("abc", exp.getValue(context));
+		assertThat(exp.getValue(context)).isEqualTo("abc");
 	}
 
 	@Test
-	public void reservedWordProperties_SPR9862() {
+	void reservedWordProperties_SPR9862() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		SpelExpressionParser parser = new SpelExpressionParser();
 		SpelExpression expression = parser.parseRaw("T(org.springframework.expression.spel.testresources.le.div.mod.reserved.Reserver).CONST");
 		Object value = expression.getValue(context);
-		assertEquals(value, Reserver.CONST);
+		assertThat(Reserver.CONST).isEqualTo(value);
 	}
 
 	/**
@@ -865,7 +829,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * in evaluation of SPEL expressions for a given context.
 	 */
 	@Test
-	public void propertyAccessorOrder_SPR8211() {
+	void propertyAccessorOrder_SPR8211() {
 		ExpressionParser expressionParser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new ContextObject());
 
@@ -874,10 +838,10 @@ public class SpelReproTests extends AbstractExpressionTests {
 		evaluationContext.addPropertyAccessor(new TestPropertyAccessor("thirdContext"));
 		evaluationContext.addPropertyAccessor(new TestPropertyAccessor("fourthContext"));
 
-		assertEquals("first", expressionParser.parseExpression("shouldBeFirst").getValue(evaluationContext));
-		assertEquals("second", expressionParser.parseExpression("shouldBeSecond").getValue(evaluationContext));
-		assertEquals("third", expressionParser.parseExpression("shouldBeThird").getValue(evaluationContext));
-		assertEquals("fourth", expressionParser.parseExpression("shouldBeFourth").getValue(evaluationContext));
+		assertThat(expressionParser.parseExpression("shouldBeFirst").getValue(evaluationContext)).isEqualTo("first");
+		assertThat(expressionParser.parseExpression("shouldBeSecond").getValue(evaluationContext)).isEqualTo("second");
+		assertThat(expressionParser.parseExpression("shouldBeThird").getValue(evaluationContext)).isEqualTo("third");
+		assertThat(expressionParser.parseExpression("shouldBeFourth").getValue(evaluationContext)).isEqualTo("fourth");
 	}
 
 	/**
@@ -885,7 +849,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 	 * determines the set of methods for a type.
 	 */
 	@Test
-	public void customStaticFunctions_SPR9038() {
+	void customStaticFunctions_SPR9038() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		List<MethodResolver> methodResolvers = new ArrayList<>();
@@ -905,11 +869,11 @@ public class SpelReproTests extends AbstractExpressionTests {
 		Expression expression = parser.parseExpression("parseInt('-FF', 16)");
 
 		Integer result = expression.getValue(context, "", Integer.class);
-		assertEquals(-255, result.intValue());
+		assertThat(result.intValue()).isEqualTo(-255);
 	}
 
 	@Test
-	public void array() {
+	void array() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = null;
@@ -917,28 +881,28 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		expression = parser.parseExpression("new java.lang.Long[0].class");
 		result = expression.getValue(context, "");
-		assertEquals("Equal assertion failed: ", "class [Ljava.lang.Long;", result.toString());
+		assertThat(result.toString()).as("Equal assertion failed: ").isEqualTo("class [Ljava.lang.Long;");
 
 		expression = parser.parseExpression("T(java.lang.Long[])");
 		result = expression.getValue(context, "");
-		assertEquals("Equal assertion failed: ", "class [Ljava.lang.Long;", result.toString());
+		assertThat(result.toString()).as("Equal assertion failed: ").isEqualTo("class [Ljava.lang.Long;");
 
 		expression = parser.parseExpression("T(java.lang.String[][][])");
 		result = expression.getValue(context, "");
-		assertEquals("Equal assertion failed: ", "class [[[Ljava.lang.String;", result.toString());
-		assertEquals("T(java.lang.String[][][])", ((SpelExpression) expression).toStringAST());
+		assertThat(result.toString()).as("Equal assertion failed: ").isEqualTo("class [[[Ljava.lang.String;");
+		assertThat(((SpelExpression) expression).toStringAST()).isEqualTo("T(java.lang.String[][][])");
 
 		expression = parser.parseExpression("new int[0].class");
 		result = expression.getValue(context, "");
-		assertEquals("Equal assertion failed: ", "class [I", result.toString());
+		assertThat(result.toString()).as("Equal assertion failed: ").isEqualTo("class [I");
 
 		expression = parser.parseExpression("T(int[][])");
 		result = expression.getValue(context, "");
-		assertEquals("class [[I", result.toString());
+		assertThat(result.toString()).isEqualTo("class [[I");
 	}
 
 	@Test
-	public void SPR9486_floatFunctionResolver() {
+	void SPR9486_floatFunctionResolver() {
 		Number expectedResult = Math.abs(-10.2f);
 		ExpressionParser parser = new SpelExpressionParser();
 		SPR9486_FunctionsClass testObject = new SPR9486_FunctionsClass();
@@ -946,335 +910,334 @@ public class SpelReproTests extends AbstractExpressionTests {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("abs(-10.2f)");
 		Number result = expression.getValue(context, testObject, Number.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_addFloatWithDouble() {
+	void SPR9486_addFloatWithDouble() {
 		Number expectedNumber = 10.21f + 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f + 10.2");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_addFloatWithFloat() {
+	void SPR9486_addFloatWithFloat() {
 		Number expectedNumber = 10.21f + 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f + 10.2f");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_subtractFloatWithDouble() {
+	void SPR9486_subtractFloatWithDouble() {
 		Number expectedNumber = 10.21f - 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f - 10.2");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_subtractFloatWithFloat() {
+	void SPR9486_subtractFloatWithFloat() {
 		Number expectedNumber = 10.21f - 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f - 10.2f");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_multiplyFloatWithDouble() {
+	void SPR9486_multiplyFloatWithDouble() {
 		Number expectedNumber = 10.21f * 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f * 10.2");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_multiplyFloatWithFloat() {
+	void SPR9486_multiplyFloatWithFloat() {
 		Number expectedNumber = 10.21f * 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f * 10.2f");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatDivideByFloat() {
+	void SPR9486_floatDivideByFloat() {
 		Number expectedNumber = -10.21f / -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f / -10.2f");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatDivideByDouble() {
+	void SPR9486_floatDivideByDouble() {
 		Number expectedNumber = -10.21f / -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f / -10.2");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatEqFloatUnaryMinus() {
+	void SPR9486_floatEqFloatUnaryMinus() {
 		Boolean expectedResult = -10.21f == -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f == -10.2f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatEqDoubleUnaryMinus() {
+	void SPR9486_floatEqDoubleUnaryMinus() {
 		Boolean expectedResult = -10.21f == -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f == -10.2");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatEqFloat() {
+	void SPR9486_floatEqFloat() {
 		Boolean expectedResult = 10.215f == 10.2109f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.215f == 10.2109f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatEqDouble() {
+	void SPR9486_floatEqDouble() {
 		Boolean expectedResult = 10.215f == 10.2109;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.215f == 10.2109");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatNotEqFloat() {
+	void SPR9486_floatNotEqFloat() {
 		Boolean expectedResult = 10.215f != 10.2109f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.215f != 10.2109f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatNotEqDouble() {
+	void SPR9486_floatNotEqDouble() {
 		Boolean expectedResult = 10.215f != 10.2109;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.215f != 10.2109");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatLessThanFloat() {
+	void SPR9486_floatLessThanFloat() {
 		Boolean expectedNumber = -10.21f < -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f < -10.2f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatLessThanDouble() {
+	void SPR9486_floatLessThanDouble() {
 		Boolean expectedNumber = -10.21f < -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f < -10.2");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatLessThanOrEqualFloat() {
+	void SPR9486_floatLessThanOrEqualFloat() {
 		Boolean expectedNumber = -10.21f <= -10.22f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f <= -10.22f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatLessThanOrEqualDouble() {
+	void SPR9486_floatLessThanOrEqualDouble() {
 		Boolean expectedNumber = -10.21f <= -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f <= -10.2");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanFloat() {
+	void SPR9486_floatGreaterThanFloat() {
 		Boolean expectedNumber = -10.21f > -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f > -10.2f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanDouble() {
+	void SPR9486_floatGreaterThanDouble() {
 		Boolean expectedResult = -10.21f > -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f > -10.2");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanOrEqualFloat() {
+	void SPR9486_floatGreaterThanOrEqualFloat() {
 		Boolean expectedNumber = -10.21f >= -10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f >= -10.2f");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedNumber, result);
+		assertThat(result).isEqualTo(expectedNumber);
 	}
 
 	@Test
-	public void SPR9486_floatGreaterThanEqualDouble() {
+	void SPR9486_floatGreaterThanEqualDouble() {
 		Boolean expectedResult = -10.21f >= -10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("-10.21f >= -10.2");
 		Boolean result = expression.getValue(context, null, Boolean.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatModulusFloat() {
+	void SPR9486_floatModulusFloat() {
 		Number expectedResult = 10.21f % 10.2f;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f % 10.2f");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatModulusDouble() {
+	void SPR9486_floatModulusDouble() {
 		Number expectedResult = 10.21f % 10.2;
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f % 10.2");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatPowerFloat() {
+	void SPR9486_floatPowerFloat() {
 		Number expectedResult = Math.pow(10.21f, -10.2f);
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f ^ -10.2f");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9486_floatPowerDouble() {
+	void SPR9486_floatPowerDouble() {
 		Number expectedResult = Math.pow(10.21f, 10.2);
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Expression expression = parser.parseExpression("10.21f ^ 10.2");
 		Number result = expression.getValue(context, null, Number.class);
-		assertEquals(expectedResult, result);
+		assertThat(result).isEqualTo(expectedResult);
 	}
 
 	@Test
-	public void SPR9994_bridgeMethods() throws Exception {
+	void SPR9994_bridgeMethods() throws Exception {
 		ReflectivePropertyAccessor accessor = new ReflectivePropertyAccessor();
 		StandardEvaluationContext context = new StandardEvaluationContext();
-		Object target = new GenericImplementation();
+		GenericImplementation target = new GenericImplementation();
+		accessor.write(context, target, "property", "1");
+		assertThat(target.value).isEqualTo(1);
 		TypedValue value = accessor.read(context, target, "property");
-		assertEquals(Integer.class, value.getTypeDescriptor().getType());
+		assertThat(value.getValue()).isEqualTo(1);
+		assertThat(value.getTypeDescriptor().getType()).isEqualTo(Integer.class);
+		assertThat(value.getTypeDescriptor().getAnnotations()).isNotEmpty();
 	}
 
 	@Test
-	public void SPR10162_onlyBridgeMethod() throws Exception {
+	void SPR10162_onlyBridgeMethod() throws Exception {
 		ReflectivePropertyAccessor accessor = new ReflectivePropertyAccessor();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Object target = new OnlyBridgeMethod();
 		TypedValue value = accessor.read(context, target, "property");
-		assertEquals(Integer.class, value.getTypeDescriptor().getType());
+		assertThat(value.getValue()).isNull();
+		assertThat(value.getTypeDescriptor().getType()).isEqualTo(Integer.class);
 	}
 
 	@Test
-	public void SPR10091_simpleTestValueType() {
+	void SPR10091_simpleTestValueType() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Class<?> valueType = parser.parseExpression("simpleProperty").getValueType(evaluationContext);
-		assertNotNull(valueType);
+		assertThat(valueType).isEqualTo(Boolean.class);
 	}
 
 	@Test
-	public void SPR10091_simpleTestValue() {
+	void SPR10091_simpleTestValue() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Object value = parser.parseExpression("simpleProperty").getValue(evaluationContext);
-		assertNotNull(value);
+		assertThat(value).isInstanceOf(Boolean.class);
 	}
 
 	@Test
-	public void SPR10091_primitiveTestValueType() {
+	void SPR10091_primitiveTestValueType() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Class<?> valueType = parser.parseExpression("primitiveProperty").getValueType(evaluationContext);
-		assertNotNull(valueType);
+		assertThat(valueType).isEqualTo(Boolean.class);
 	}
 
 	@Test
-	public void SPR10091_primitiveTestValue() {
+	void SPR10091_primitiveTestValue() {
 		ExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext evaluationContext = new StandardEvaluationContext(new BooleanHolder());
 		Object value = parser.parseExpression("primitiveProperty").getValue(evaluationContext);
-		assertNotNull(value);
+		assertThat(value).isInstanceOf(Boolean.class);
 	}
 
 	@Test
-	public void SPR16123() {
+	void SPR16123() {
 		ExpressionParser parser = new SpelExpressionParser();
 		parser.parseExpression("simpleProperty").setValue(new BooleanHolder(), null);
-
-		try {
-			parser.parseExpression("primitiveProperty").setValue(new BooleanHolder(), null);
-			fail("Should have thrown EvaluationException");
-		}
-		catch (EvaluationException ex) {
-			// expected
-		}
+		assertThatExceptionOfType(EvaluationException.class).isThrownBy(() ->
+				parser.parseExpression("primitiveProperty").setValue(new BooleanHolder(), null));
 	}
 
 	@Test
-	public void SPR10146_malformedExpressions() {
+	void SPR10146_malformedExpressions() {
 		doTestSpr10146("/foo", "EL1070E: Problem parsing left operand");
 		doTestSpr10146("*foo", "EL1070E: Problem parsing left operand");
 		doTestSpr10146("%foo", "EL1070E: Problem parsing left operand");
@@ -1282,29 +1245,28 @@ public class SpelReproTests extends AbstractExpressionTests {
 		doTestSpr10146(">foo", "EL1070E: Problem parsing left operand");
 		doTestSpr10146("&&foo", "EL1070E: Problem parsing left operand");
 		doTestSpr10146("||foo", "EL1070E: Problem parsing left operand");
-		doTestSpr10146("&foo", "EL1069E: missing expected character '&'");
-		doTestSpr10146("|foo", "EL1069E: missing expected character '|'");
+		doTestSpr10146("|foo", "EL1069E: Missing expected character '|'");
 	}
 
 	private void doTestSpr10146(String expression, String expectedMessage) {
-		thrown.expect(SpelParseException.class);
-		thrown.expectMessage(expectedMessage);
-		new SpelExpressionParser().parseExpression(expression);
+		assertThatExceptionOfType(SpelParseException.class).isThrownBy(() ->
+				new SpelExpressionParser().parseExpression(expression))
+			.withMessageContaining(expectedMessage);
 	}
 
 	@Test
-	public void SPR10125() {
+	void SPR10125() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		String fromInterface = parser.parseExpression("T(" + StaticFinalImpl1.class.getName() + ").VALUE").getValue(
 				context, String.class);
-		assertThat(fromInterface, is("interfaceValue"));
+		assertThat(fromInterface).isEqualTo("interfaceValue");
 		String fromClass = parser.parseExpression("T(" + StaticFinalImpl2.class.getName() + ").VALUE").getValue(
 				context, String.class);
-		assertThat(fromClass, is("interfaceValue"));
+		assertThat(fromClass).isEqualTo("interfaceValue");
 	}
 
 	@Test
-	public void SPR10210() {
+	void SPR10210() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		context.setVariable("bridgeExample", new org.springframework.expression.spel.spr10210.D());
 		Expression parseExpression = parser.parseExpression("#bridgeExample.bridgeMethod()");
@@ -1312,15 +1274,14 @@ public class SpelReproTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	public void SPR10328() {
-		thrown.expect(SpelParseException.class);
-		thrown.expectMessage("EL1071E: A required selection expression has not been specified");
-		Expression exp = parser.parseExpression("$[]");
-		exp.getValue(Arrays.asList("foo", "bar", "baz"));
+	void SPR10328() {
+		assertThatExceptionOfType(SpelParseException.class).isThrownBy(() ->
+				parser.parseExpression("$[]"))
+			.withMessageContaining("EL1071E: A required selection expression has not been specified");
 	}
 
 	@Test
-	public void SPR10452() {
+	void SPR10452() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(false, false);
 		ExpressionParser parser = new SpelExpressionParser(configuration);
 
@@ -1329,23 +1290,23 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		context.setVariable("enumType", ABC.class);
 		Object result = spel.getValue(context);
-		assertNotNull(result);
-		assertTrue(result.getClass().isArray());
-		assertEquals(ABC.A, Array.get(result, 0));
-		assertEquals(ABC.B, Array.get(result, 1));
-		assertEquals(ABC.C, Array.get(result, 2));
+		assertThat(result).isNotNull();
+		assertThat(result.getClass().isArray()).isTrue();
+		assertThat(Array.get(result, 0)).isEqualTo(ABC.A);
+		assertThat(Array.get(result, 1)).isEqualTo(ABC.B);
+		assertThat(Array.get(result, 2)).isEqualTo(ABC.C);
 
 		context.setVariable("enumType", XYZ.class);
 		result = spel.getValue(context);
-		assertNotNull(result);
-		assertTrue(result.getClass().isArray());
-		assertEquals(XYZ.X, Array.get(result, 0));
-		assertEquals(XYZ.Y, Array.get(result, 1));
-		assertEquals(XYZ.Z, Array.get(result, 2));
+		assertThat(result).isNotNull();
+		assertThat(result.getClass().isArray()).isTrue();
+		assertThat(Array.get(result, 0)).isEqualTo(XYZ.X);
+		assertThat(Array.get(result, 1)).isEqualTo(XYZ.Y);
+		assertThat(Array.get(result, 2)).isEqualTo(XYZ.Z);
 	}
 
 	@Test
-	public void SPR9495() {
+	void SPR9495() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(false, false);
 		ExpressionParser parser = new SpelExpressionParser(configuration);
 
@@ -1354,65 +1315,61 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		context.setVariable("enumType", ABC.class);
 		Object result = spel.getValue(context);
-		assertNotNull(result);
-		assertTrue(result.getClass().isArray());
-		assertEquals(ABC.A, Array.get(result, 0));
-		assertEquals(ABC.B, Array.get(result, 1));
-		assertEquals(ABC.C, Array.get(result, 2));
+		assertThat(result).isNotNull();
+		assertThat(result.getClass().isArray()).isTrue();
+		assertThat(Array.get(result, 0)).isEqualTo(ABC.A);
+		assertThat(Array.get(result, 1)).isEqualTo(ABC.B);
+		assertThat(Array.get(result, 2)).isEqualTo(ABC.C);
 
 		context.addMethodResolver(new MethodResolver() {
 			@Override
 			public MethodExecutor resolve(EvaluationContext context, Object targetObject, String name,
 					List<TypeDescriptor> argumentTypes) throws AccessException {
-				return new MethodExecutor() {
-					@Override
-					public TypedValue execute(EvaluationContext context, Object target, Object... arguments)
-							throws AccessException {
-						try {
-							Method method = XYZ.class.getMethod("values");
-							Object value = method.invoke(target, arguments);
-							return new TypedValue(value, new TypeDescriptor(new MethodParameter(method, -1)).narrow(value));
-						}
-						catch (Exception ex) {
-							throw new AccessException(ex.getMessage(), ex);
-						}
+				return (context1, target, arguments) -> {
+					try {
+						Method method = XYZ.class.getMethod("values");
+						Object value = method.invoke(target, arguments);
+						return new TypedValue(value, new TypeDescriptor(new MethodParameter(method, -1)).narrow(value));
+					}
+					catch (Exception ex) {
+						throw new AccessException(ex.getMessage(), ex);
 					}
 				};
 			}
 		});
 
 		result = spel.getValue(context);
-		assertNotNull(result);
-		assertTrue(result.getClass().isArray());
-		assertEquals(XYZ.X, Array.get(result, 0));
-		assertEquals(XYZ.Y, Array.get(result, 1));
-		assertEquals(XYZ.Z, Array.get(result, 2));
+		assertThat(result).isNotNull();
+		assertThat(result.getClass().isArray()).isTrue();
+		assertThat(Array.get(result, 0)).isEqualTo(XYZ.X);
+		assertThat(Array.get(result, 1)).isEqualTo(XYZ.Y);
+		assertThat(Array.get(result, 2)).isEqualTo(XYZ.Z);
 	}
 
 	@Test
-	public void SPR10486() {
+	void SPR10486() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Spr10486 rootObject = new Spr10486();
 		Expression classNameExpression = parser.parseExpression("class.name");
 		Expression nameExpression = parser.parseExpression("name");
-		assertThat(classNameExpression.getValue(context, rootObject), equalTo((Object) Spr10486.class.getName()));
-		assertThat(nameExpression.getValue(context, rootObject), equalTo((Object) "name"));
+		assertThat(classNameExpression.getValue(context, rootObject)).isEqualTo(Spr10486.class.getName());
+		assertThat(nameExpression.getValue(context, rootObject)).isEqualTo("name");
 	}
 
 	@Test
-	public void SPR11142() {
+	void SPR11142() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		Spr11142 rootObject = new Spr11142();
 		Expression expression = parser.parseExpression("something");
-		thrown.expect(SpelEvaluationException.class);
-		thrown.expectMessage("'something' cannot be found");
-		expression.getValue(context, rootObject);
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				expression.getValue(context, rootObject))
+			.withMessageContaining("'something' cannot be found");
 	}
 
 	@Test
-	public void SPR9194() {
+	void SPR9194() {
 		TestClass2 one = new TestClass2("abc");
 		TestClass2 two = new TestClass2("abc");
 		Map<String, TestClass2> map = new HashMap<>();
@@ -1421,11 +1378,11 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expr = parser.parseExpression("['one'] == ['two']");
-		assertTrue(expr.getValue(map, Boolean.class));
+		assertThat(expr.getValue(map, Boolean.class)).isTrue();
 	}
 
 	@Test
-	public void SPR11348() {
+	void SPR11348() {
 		Collection<String> coll = new LinkedHashSet<>();
 		coll.add("one");
 		coll.add("two");
@@ -1434,47 +1391,47 @@ public class SpelReproTests extends AbstractExpressionTests {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expr = parser.parseExpression("new java.util.ArrayList(#root)");
 		Object value = expr.getValue(coll);
-		assertTrue(value instanceof ArrayList);
+		assertThat(value instanceof ArrayList).isTrue();
 		@SuppressWarnings("rawtypes")
 		ArrayList list = (ArrayList) value;
-		assertEquals("one", list.get(0));
-		assertEquals("two", list.get(1));
+		assertThat(list.get(0)).isEqualTo("one");
+		assertThat(list.get(1)).isEqualTo("two");
 	}
 
 	@Test
-	public void SPR11445_simple() {
+	void SPR11445_simple() {
 		StandardEvaluationContext context = new StandardEvaluationContext(new Spr11445Class());
 		Expression expr = new SpelExpressionParser().parseRaw("echo(parameter())");
-		assertEquals(1, expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo(1);
 	}
 
 	@Test
-	public void SPR11445_beanReference() {
+	void SPR11445_beanReference() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		context.setBeanResolver(new Spr11445Class());
 		Expression expr = new SpelExpressionParser().parseRaw("@bean.echo(@bean.parameter())");
-		assertEquals(1, expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo(1);
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void SPR11494() {
+	void SPR11494() {
 		Expression exp = new SpelExpressionParser().parseExpression("T(java.util.Arrays).asList('a','b')");
 		List<String> list = (List<String>) exp.getValue();
-		assertThat(list.size(), is(2));
+		assertThat(list).hasSize(2);
 	}
 
 	@Test
-	public void SPR11609() {
+	void SPR11609() {
 		StandardEvaluationContext sec = new StandardEvaluationContext();
 		sec.addPropertyAccessor(new MapAccessor());
 		Expression exp = new SpelExpressionParser().parseExpression(
 				"T(org.springframework.expression.spel.SpelReproTests$MapWithConstant).X");
-		assertEquals(1, exp.getValue(sec));
+		assertThat(exp.getValue(sec)).isEqualTo(1);
 	}
 
 	@Test
-	public void SPR9735() {
+	void SPR9735() {
 		Item item = new Item();
 		item.setName("parent");
 
@@ -1492,54 +1449,54 @@ public class SpelReproTests extends AbstractExpressionTests {
 		Expression exp = parser.parseExpression("#item[0].name");
 		context.setVariable("item", item);
 
-		assertEquals("child1", exp.getValue(context));
+		assertThat(exp.getValue(context)).isEqualTo("child1");
 	}
 
 	@Test
-	public void SPR12502() {
+	void SPR12502() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("#root.getClass().getName()");
-		assertEquals(UnnamedUser.class.getName(), expression.getValue(new UnnamedUser()));
-		assertEquals(NamedUser.class.getName(), expression.getValue(new NamedUser()));
+		assertThat(expression.getValue(new UnnamedUser())).isEqualTo(UnnamedUser.class.getName());
+		assertThat(expression.getValue(new NamedUser())).isEqualTo(NamedUser.class.getName());
 	}
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void SPR12522() {
+	void SPR12522() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("T(java.util.Arrays).asList('')");
 		Object value = expression.getValue();
-		assertTrue(value instanceof List);
-		assertTrue(((List) value).isEmpty());
+		assertThat(value instanceof List).isTrue();
+		assertThat(((List) value).isEmpty()).isTrue();
 	}
 
 	@Test
-	public void SPR12803() {
+	void SPR12803() {
 		StandardEvaluationContext sec = new StandardEvaluationContext();
 		sec.setVariable("iterable", Collections.emptyList());
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("T(org.springframework.expression.spel.SpelReproTests.FooLists).newArrayList(#iterable)");
-		assertTrue(expression.getValue(sec) instanceof ArrayList);
+		assertThat(expression.getValue(sec) instanceof ArrayList).isTrue();
 	}
 
 	@Test
-	public void SPR12808() {
+	void SPR12808() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("T(org.springframework.expression.spel.SpelReproTests.DistanceEnforcer).from(#no)");
 		StandardEvaluationContext sec = new StandardEvaluationContext();
-		sec.setVariable("no", new Integer(1));
-		assertTrue(expression.getValue(sec).toString().startsWith("Integer"));
+		sec.setVariable("no", 1);
+		assertThat(expression.getValue(sec).toString().startsWith("Integer")).isTrue();
 		sec = new StandardEvaluationContext();
-		sec.setVariable("no", new Float(1.0));
-		assertTrue(expression.getValue(sec).toString().startsWith("Number"));
+		sec.setVariable("no", 1.0F);
+		assertThat(expression.getValue(sec).toString().startsWith("Number")).isTrue();
 		sec = new StandardEvaluationContext();
 		sec.setVariable("no", "1.0");
-		assertTrue(expression.getValue(sec).toString().startsWith("Object"));
+		assertThat(expression.getValue(sec).toString().startsWith("Object")).isTrue();
 	}
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void SPR13055() {
+	void SPR13055() {
 		List<Map<String, Object>> myPayload = new ArrayList<>();
 
 		Map<String, Object> v1 = new HashMap<>();
@@ -1559,73 +1516,69 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 		String ex = "#root.![T(org.springframework.util.StringUtils).collectionToCommaDelimitedString(#this.values())]";
 		List res = parser.parseExpression(ex).getValue(context, List.class);
-		assertEquals("[test12,test11, test22,test21]", res.toString());
+		assertThat(res.toString()).isEqualTo("[test12,test11, test22,test21]");
 
 		res = parser.parseExpression("#root.![#this.values()]").getValue(context,
 				List.class);
-		assertEquals("[[test12, test11], [test22, test21]]", res.toString());
+		assertThat(res.toString()).isEqualTo("[[test12, test11], [test22, test21]]");
 
 		res = parser.parseExpression("#root.![values()]").getValue(context, List.class);
-		assertEquals("[[test12, test11], [test22, test21]]", res.toString());
+		assertThat(res.toString()).isEqualTo("[[test12, test11], [test22, test21]]");
 	}
 
 	@Test
-	public void AccessingFactoryBean_spr9511() {
+	void AccessingFactoryBean_spr9511() {
 		StandardEvaluationContext context = new StandardEvaluationContext();
 		context.setBeanResolver(new MyBeanResolver());
 		Expression expr = new SpelExpressionParser().parseRaw("@foo");
-		assertEquals("custard", expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("custard");
 		expr = new SpelExpressionParser().parseRaw("&foo");
-		assertEquals("foo factory",expr.getValue(context));
+		assertThat(expr.getValue(context)).isEqualTo("foo factory");
 
-		try {
-			expr = new SpelExpressionParser().parseRaw("&@foo");
-			fail("Illegal syntax, error expected");
-		}
-		catch (SpelParseException spe) {
-			assertEquals(SpelMessage.INVALID_BEAN_REFERENCE,spe.getMessageCode());
-			assertEquals(0,spe.getPosition());
-		}
+		assertThatExceptionOfType(SpelParseException.class).isThrownBy(() ->
+				new SpelExpressionParser().parseRaw("&@foo"))
+			.satisfies(ex -> {
+				assertThat(ex.getMessageCode()).isEqualTo(SpelMessage.INVALID_BEAN_REFERENCE);
+				assertThat(ex.getPosition()).isEqualTo(0);
+			});
 
-		try {
-			expr = new SpelExpressionParser().parseRaw("@&foo");
-			fail("Illegal syntax, error expected");
-		}
-		catch (SpelParseException spe) {
-			assertEquals(SpelMessage.INVALID_BEAN_REFERENCE,spe.getMessageCode());
-			assertEquals(0,spe.getPosition());
-		}
+		assertThatExceptionOfType(SpelParseException.class).isThrownBy(() ->
+				new SpelExpressionParser().parseRaw("@&foo"))
+		.satisfies(ex -> {
+			assertThat(ex.getMessageCode()).isEqualTo(SpelMessage.INVALID_BEAN_REFERENCE);
+			assertThat(ex.getPosition()).isEqualTo(0);
+		});
 	}
 
 	@Test
-	public void SPR12035() {
+	void SPR12035() {
 		ExpressionParser parser = new SpelExpressionParser();
 
 		Expression expression1 = parser.parseExpression("list.?[ value>2 ].size()!=0");
-		assertTrue(expression1.getValue(new BeanClass(new ListOf(1.1), new ListOf(2.2)), Boolean.class));
+		assertThat(expression1.getValue(new BeanClass(new ListOf(1.1), new ListOf(2.2)), Boolean.class)).isTrue();
 
 		Expression expression2 = parser.parseExpression("list.?[ T(java.lang.Math).abs(value) > 2 ].size()!=0");
-		assertTrue(expression2.getValue(new BeanClass(new ListOf(1.1), new ListOf(-2.2)), Boolean.class));
+		assertThat(expression2.getValue(new BeanClass(new ListOf(1.1), new ListOf(-2.2)), Boolean.class)).isTrue();
 	}
 
 	@Test
-	public void SPR13055_maps() {
+	void SPR13055_maps() {
 		EvaluationContext context = new StandardEvaluationContext();
 		ExpressionParser parser = new SpelExpressionParser();
 
 		Expression ex = parser.parseExpression("{'a':'y','b':'n'}.![value=='y'?key:null]");
-		assertEquals("[a, null]", ex.getValue(context).toString());
+		assertThat(ex.getValue(context).toString()).isEqualTo("[a, null]");
 
 		ex = parser.parseExpression("{2:4,3:6}.![T(java.lang.Math).abs(#this.key) + 5]");
-		assertEquals("[7, 8]", ex.getValue(context).toString());
+		assertThat(ex.getValue(context).toString()).isEqualTo("[7, 8]");
 
 		ex = parser.parseExpression("{2:4,3:6}.![T(java.lang.Math).abs(#this.value) + 5]");
-		assertEquals("[9, 11]", ex.getValue(context).toString());
+		assertThat(ex.getValue(context).toString()).isEqualTo("[9, 11]");
 	}
 
 	@Test
 	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public void SPR10417() {
+	void SPR10417() {
 		List list1 = new ArrayList();
 		list1.add("a");
 		list1.add("b");
@@ -1640,12 +1593,12 @@ public class SpelReproTests extends AbstractExpressionTests {
 		// #this should be the element from list1
 		Expression ex = parser.parseExpression("#list1.?[#list2.contains(#this)]");
 		Object result = ex.getValue(context);
-		assertEquals("[x]", result.toString());
+		assertThat(result.toString()).isEqualTo("[x]");
 
 		// toString() should be called on the element from list1
 		ex = parser.parseExpression("#list1.?[#list2.contains(toString())]");
 		result = ex.getValue(context);
-		assertEquals("[x]", result.toString());
+		assertThat(result.toString()).isEqualTo("[x]");
 
 		List list3 = new ArrayList();
 		list3.add(1);
@@ -1657,16 +1610,16 @@ public class SpelReproTests extends AbstractExpressionTests {
 		context.setVariable("list3", list3);
 		ex = parser.parseExpression("#list3.?[#this > 2]");
 		result = ex.getValue(context);
-		assertEquals("[3, 4]", result.toString());
+		assertThat(result.toString()).isEqualTo("[3, 4]");
 
 		ex = parser.parseExpression("#list3.?[#this >= T(java.lang.Math).abs(T(java.lang.Math).abs(#this))]");
 		result = ex.getValue(context);
-		assertEquals("[1, 2, 3, 4]", result.toString());
+		assertThat(result.toString()).isEqualTo("[1, 2, 3, 4]");
 	}
 
 	@Test
 	@SuppressWarnings({ "unchecked", "rawtypes" })
-	public void SPR10417_maps() {
+	void SPR10417_maps() {
 		Map map1 = new HashMap();
 		map1.put("A", 65);
 		map1.put("B", 66);
@@ -1681,31 +1634,31 @@ public class SpelReproTests extends AbstractExpressionTests {
 		// #this should be the element from list1
 		Expression ex = parser.parseExpression("#map1.?[#map2.containsKey(#this.getKey())]");
 		Object result = ex.getValue(context);
-		assertEquals("{X=66}", result.toString());
+		assertThat(result.toString()).isEqualTo("{X=66}");
 
 		ex = parser.parseExpression("#map1.?[#map2.containsKey(key)]");
 		result = ex.getValue(context);
-		assertEquals("{X=66}", result.toString());
+		assertThat(result.toString()).isEqualTo("{X=66}");
 	}
 
 	@Test
-	public void SPR13918() {
+	void SPR13918() {
 		EvaluationContext context = new StandardEvaluationContext();
 		context.setVariable("encoding", "UTF-8");
 
 		Expression ex = parser.parseExpression("T(java.nio.charset.Charset).forName(#encoding)");
 		Object result = ex.getValue(context);
-		assertEquals(StandardCharsets.UTF_8, result);
+		assertThat(result).isEqualTo(StandardCharsets.UTF_8);
 	}
 
 	@Test
-	public void SPR16032() {
+	void SPR16032() {
 		EvaluationContext context = new StandardEvaluationContext();
 		context.setVariable("str", "a\0b");
 
 		Expression ex = parser.parseExpression("#str?.split('\0')");
 		Object result = ex.getValue(context);
-		assertTrue(ObjectUtils.nullSafeEquals(result, new String[] {"a", "b"}));
+		assertThat(ObjectUtils.nullSafeEquals(result, new String[] {"a", "b"})).isTrue();
 	}
 
 
@@ -1740,7 +1693,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 		}
 
 		public Integer tryToInvokeWithNull2(int i) {
-			return new Integer(i);
+			return i;
 		}
 
 		public String tryToInvokeWithNull3(Integer value, String... strings) {
@@ -2220,15 +2173,25 @@ public class SpelReproTests extends AbstractExpressionTests {
 
 	private interface GenericInterface<T extends Number> {
 
+		void setProperty(T value);
+
 		T getProperty();
 	}
 
 
 	private static class GenericImplementation implements GenericInterface<Integer> {
 
+		int value;
+
 		@Override
+		public void setProperty(Integer value) {
+			this.value = value;
+		}
+
+		@Override
+		@Nullable
 		public Integer getProperty() {
-			return null;
+			return this.value;
 		}
 	}
 
@@ -2293,6 +2256,7 @@ public class SpelReproTests extends AbstractExpressionTests {
 			this.string = string;
 		}
 
+		@Override
 		public boolean equals(Object other) {
 			return (this == other || (other instanceof TestClass2 &&
 					this.string.equals(((TestClass2) other).string)));
