@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,16 +18,23 @@ package org.springframework.web.context.request;
 
 import java.io.Serializable;
 import java.math.BigInteger;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpSession;
 
-import org.junit.Test;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpSession;
+import org.junit.jupiter.api.Test;
 
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockHttpSession;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockHttpSession;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 
 /**
  * @author Rick Evans
@@ -42,71 +49,67 @@ public class ServletRequestAttributesTests {
 	};
 
 
-	@Test(expected = IllegalArgumentException.class)
-	public void ctorRejectsNullArg() throws Exception {
-		new ServletRequestAttributes(null);
+	@Test
+	public void ctorRejectsNullArg() {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				new ServletRequestAttributes(null));
 	}
 
 	@Test
-	public void setRequestScopedAttribute() throws Exception {
+	public void setRequestScopedAttribute() {
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST);
 		Object value = request.getAttribute(KEY);
-		assertSame(VALUE, value);
+		assertThat(value).isSameAs(VALUE);
 	}
 
 	@Test
-	public void setRequestScopedAttributeAfterCompletion() throws Exception {
+	public void setRequestScopedAttributeAfterCompletion() {
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		request.close();
-		try {
-			attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST);
-			fail("Should have thrown IllegalStateException");
-		}
-		catch (IllegalStateException ex) {
-			// expected
-		}
+		assertThatIllegalStateException().isThrownBy(() ->
+				attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_REQUEST));
 	}
 
 	@Test
-	public void setSessionScopedAttribute() throws Exception {
+	public void setSessionScopedAttribute() {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		request.setSession(session);
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_SESSION);
-		assertSame(VALUE, session.getAttribute(KEY));
+		assertThat(session.getAttribute(KEY)).isSameAs(VALUE);
 	}
 
 	@Test
-	public void setSessionScopedAttributeAfterCompletion() throws Exception {
+	public void setSessionScopedAttributeAfterCompletion() {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
 		request.setSession(session);
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
-		assertSame(VALUE, attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION));
+		assertThat(attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION)).isSameAs(VALUE);
 		attrs.requestCompleted();
 		request.close();
 		attrs.setAttribute(KEY, VALUE, RequestAttributes.SCOPE_SESSION);
-		assertSame(VALUE, session.getAttribute(KEY));
+		assertThat(session.getAttribute(KEY)).isSameAs(VALUE);
 	}
 
 	@Test
-	public void getSessionScopedAttributeDoesNotForceCreationOfSession() throws Exception {
+	public void getSessionScopedAttributeDoesNotForceCreationOfSession() {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		Object value = attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION);
-		assertNull(value);
+		assertThat(value).isNull();
 		verify(request).getSession(false);
 	}
 
 	@Test
-	public void removeSessionScopedAttribute() throws Exception {
+	public void removeSessionScopedAttribute() {
 		MockHttpSession session = new MockHttpSession();
 		session.setAttribute(KEY, VALUE);
 		MockHttpServletRequest request = new MockHttpServletRequest();
@@ -114,11 +117,11 @@ public class ServletRequestAttributesTests {
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
 		attrs.removeAttribute(KEY, RequestAttributes.SCOPE_SESSION);
 		Object value = session.getAttribute(KEY);
-		assertNull(value);
+		assertThat(value).isNull();
 	}
 
 	@Test
-	public void removeSessionScopedAttributeDoesNotForceCreationOfSession() throws Exception {
+	public void removeSessionScopedAttributeDoesNotForceCreationOfSession() {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
@@ -127,14 +130,14 @@ public class ServletRequestAttributesTests {
 	}
 
 	@Test
-	public void updateAccessedAttributes() throws Exception {
+	public void updateAccessedAttributes() {
 		HttpServletRequest request = mock(HttpServletRequest.class);
 		HttpSession session = mock(HttpSession.class);
 		given(request.getSession(anyBoolean())).willReturn(session);
 		given(session.getAttribute(KEY)).willReturn(VALUE);
 
 		ServletRequestAttributes attrs = new ServletRequestAttributes(request);
-		assertSame(VALUE, attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION));
+		assertThat(attrs.getAttribute(KEY, RequestAttributes.SCOPE_SESSION)).isSameAs(VALUE);
 		attrs.requestCompleted();
 
 		verify(session, times(2)).getAttribute(KEY);
@@ -149,7 +152,7 @@ public class ServletRequestAttributesTests {
 
 	@Test
 	public void skipImmutableCharacter() {
-		doSkipImmutableValue(new Character('x'));
+		doSkipImmutableValue(Character.valueOf('x'));
 	}
 
 	@Test
@@ -159,12 +162,12 @@ public class ServletRequestAttributesTests {
 
 	@Test
 	public void skipImmutableInteger() {
-		doSkipImmutableValue(new Integer(1));
+		doSkipImmutableValue(1);
 	}
 
 	@Test
 	public void skipImmutableFloat() {
-		doSkipImmutableValue(new Float(1.1));
+		doSkipImmutableValue(1.1F);
 	}
 
 	@Test
